navbar overflow problem solve

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -48,8 +48,12 @@
 
 
 
-body{
+html, body{
   overflow-x: hidden;
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 @media (min-width: 768px) {
   .plan-line:before {
